--- a/boukeshi/index.htm
+++ b/boukeshi/index.htm
@@ -10,34 +10,25 @@
 			background-color: white; 
 		},
 		</style> 
-
+		
 		<!--[if lt IE 9]>
 		<script src="html5.js" type="text/javascript"></script>
 		<![endif]--> 
-
+		
 		<script src="boukeshi.js" type="text/javascript"></script>
 		<script src="boukeshi_graph.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			var bg;
+			let bordSize = [500, 750];
 			
 			onload = function() {
 				var stage = new Array(1, 2, 3, 4, 5);
-				var option = {"pich": 3};
+				var option = {"pitch": 10, size: bordSize};
 				bg = new BoukeshiGraph("boukeshi", stage, document.f1.com_st.checked, option);
 			};
 			
-			var tosmall = function() {
-				var pich = bg.getPich();
-				pich -= 0.1;
-				if(pich < 1) pich = 1;
-				bg.setPich(pich);
-			}
-			
-			var tobig = function() {
-				var pich = bg.getPich();
-				pich += 0.1;
-				if(pich > 10) pich = 10;
-				bg.setPich(pich);
+			var changePitch = function(pitch) {
+				bg.setPitch(pitch)
 			}
 			
 			var restart = function() {
@@ -47,8 +38,8 @@
 					}
 				}
 				var stage = bg.getStage();
-				var bpich = bg.getPich();
-				var option = {"pich": bpich};
+				var bpitch = bg.getPitch();
+				var option = {"pitch": bpitch, size: bordSize};
 				bg = new BoukeshiGraph("boukeshi", stage, document.f1.com_st.checked, option);
 				
 				return true;
@@ -61,8 +52,8 @@
 					}
 				}
 				var stage = bg.getStage();
-				var bpich = bg.getPich();
-				var option = {"pich": bpich};
+				var bpitch = bg.getPitch();
+				var option = {"pitch": bpitch, size: bordSize};
 				bg = new BoukeshiStageMaker("boukeshi", stage, option);
 				
 				return true;
@@ -87,8 +78,7 @@
 		
 		<form name="f1">
 			<div>
-				<input type="button" value="Small" onclick="tosmall()" />
-				<input type="button" value="Big" onclick="tobig()" />
+				<input type="range" value="10" min="1" max="15" step="0.1" onchange="changePitch(this.value)">
 			</div>
 			<div>
 				<input type="checkbox" name="com_st" />computer start
@@ -99,9 +89,6 @@
 		<hr />
 		
 		<div id="log"></div>
-		<div><small>
-			<div>IEで jQueryを使わなくてもスライダーが使えるようになったら、[Small][Big]ボタンはスライダーに変更したいと思います。</div>
-		</small></div>
 		<hr />
 
 		<!-- <a href="../">----  戻る  ----</a> -->
