--- a/boukeshi/index.htm
+++ b/boukeshi/index.htm
@@ -66,12 +66,7 @@
 	<body bgcolor="#aadd99" alink="#0000ff" link="#005555" vlink="#005555"> 
 		<h1>棒消しゲーム (HTML5版)</h1>
 		<div>
-			最近のブラウザはJavaアプレットを動かすと動作が不安定になりがちになってきてしまったため、
-			HTML5のcanvas要素を使って「棒消しゲーム」を作り直しました。<br />
-			ブラウザによっては動作しない可能性があります。
-			(2011/09/05)<br />
-			Chrome バージョン27.0 でマウスドラッグが正常に動かなくなる不具合を修正(2013/06/15)
-			<br />
+			<div>ブラウザによっては動作しない可能性があります</div>
 		</div>
 		<div id="boukeshi"></div> 
 		<hr />
@@ -81,8 +76,10 @@
 				<input type="range" value="6" min="1" max="15" step="0.1" onchange="changePitch(this.value)">
 			</div>
 			<div>
-				<input type="checkbox" name="com_st" />computer start
-				<input type="button" value="Restart" onclick="restart()" /><br />
+				<div>
+					<input type="checkbox" name="com_st" />computer start
+					<input type="button" value="Restart" onclick="restart()" />
+				</div>
 				<input type="button" value="Create Stage" onclick="create()" />
 			</div>
 		</form>
